# lightweight-cobot

./: .gitignore  LICENSE  README.md  README_en.md  cobot-setting.yaml  install.sh  rosdep.yaml  setup.py
cobot/: cli.py  tui.py
cobot/commands/: clean.py  delete.py  doc_setup.py  docker_setup.py  local_setup.py  rebuild.py  robot_setup.py  run.py  setup.py  update.py
doc/: build_docs.sh
doc/iiwa-ros-doc/: mkdocs.yml
doc/lwc-doc/: Dockerfile  mkdocs.yml
doc/lwc-doc/docs/: index.md
doc/lwc-doc/docs/architecture/: data-flow.md  system-overview.md
doc/lwc-doc/docs/assets/: pdf_button.js
doc/lwc-doc/docs/control/: foxglove.md  simulation.md  terminal.md  web-interface.md
doc/lwc-doc/docs/development/: build-rebuild.md  cli-reference.md  troubleshooting.md
doc/lwc-doc/docs/examples/: cartesian-goal.md  joint-position.md  moveit-python.md  realsense-data.md  trajectory.md
doc/lwc-doc/docs/getting-started/: configuration.md  manual-install.md  overview.md  quick-start.md
doc/lwc-doc/docs/sunrise/: deployment.md  network.md  overview.md  project-setup.md
doc/lwc-doc/overrides/partials/: footer.html
docker/jazzy/ros-base/: Dockerfile
docker/jazzy/ros-core/: Dockerfile  ros_entrypoint.sh
docker/jazzy/ros-iiwa7/: Dockerfile
docker/jazzy/ros-iiwa7-webots/: Dockerfile  run.sh
scripts/: install_webots.sh  setup_ros2_desktop.sh  setup_ros2_ros_base.sh
src/iiwa_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/iiwa_bringup/config/: iiwa7.srdf  iiwa_controller.yaml  joint_limits.yaml  rviz_iiwa.rviz
src/iiwa_bringup/launch/: __protospawner.launch.py  digital_twin.launch.py  iiwa.launch.py  rviz_iiwa.launch.py  universal.launch.py  webots.launch.py
src/iiwa_bringup/launch/supported/: controllers.launch.py  gazebo.launch.py  iiwa_controllers.launch.py  rviz.launch.py  webots_controllers.launch.py  webots_spawn.launch.py
src/iiwa_bringup/utils/: converter.py
src/iiwa_config/: CMakeLists.txt  package.xml
src/iiwa_config/config/: api_endpoints.yaml  setting.yaml
src/iiwa_config/config/cameras/: d455_top.yaml
src/iiwa_config/config/gazebo/: gz_bridge.yaml
src/iiwa_config/config/moveit/: iiwa7.srdf  iiwa_controller.yaml  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  moveit_cpp.yaml
src/iiwa_config/config/rviz/: rviz_moveit.rviz
src/iiwa_controller/: CMakeLists.txt  iiwa_hardware_interface_plugin.xml  package.xml
src/iiwa_controller/include/iiwa_controller/: FRIClient.h  IIWAHardwareInterface.hpp
src/iiwa_controller/src/: FRIClient.cpp  IIWAHardwareInterface.cpp
src/iiwa_controller_v2/: CMakeLists.txt  external  iiwa_hardware_interface_plugin.xml  package.xml
src/iiwa_controller_v2/include/iiwa_controller_v2/: command_guard.hpp  fri_client.hpp  system_interface.hpp  system_interface_type_values.hpp
src/iiwa_controller_v2/src/: fri_client.cpp  system_interface.cpp
src/iiwa_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/iiwa_description/resource/freecad_models/: CameraHolder.FCStd  assembly_tool.FCStd  assymbly_camera_tool.FCStd  cameraD455.FCStd  camera_corner.FCStd  camera_spacer.20260409-160823.FCBak  camera_spacer.FCStd  kamera.stp  metalPlastin.FCStd  metal_spacer.FCStd  patron.20260409-100611.FCBak  patron.FCStd  tool_patron.FCStd
src/iiwa_description/resource/meshes/gripper/: base_frame.stl  craving.stl  finger.stl  finger_plates.stl  plate.stl  screw.stl
src/iiwa_description/resource/meshes/tools/: CameraHolder.dae  cameraD455.dae  camera_corner.dae  patron.dae
src/iiwa_description/resource/protos/: CollaborativeRobotTable.proto  IntelRealsenseD455.proto  Object.proto  WorkspaceLimiter.proto
src/iiwa_description/urdf/: gripper.urdf  iiwa7.urdf  iiwa7.urdf.xacro  iiwa7_digital.urdf.xacro  iiwa7_fri.urdf.xacro  iiwa7_gazebo.urdf  joints.xacro  links.xacro  macros.xacro  meshes.xacro  params.xacro
src/iiwa_description/urdf/gripper/: ___gripper.urdf  gripper.xacro  gripper_joints.xacro  gripper_links.xacro  gripper_macros.xacro  gripper_meshes.xacro
src/iiwa_description/urdf/table/: table.urdf
src/iiwa_description/urdf/tools/: patron.xacro
src/iiwa_description/worlds/: iiwa.wbt  iiwa_control_cabinet.wbt  iiwa_world.sdf  simple_world.wbt
src/iiwa_msgs/: CMakeLists.txt  package.xml
src/iiwa_msgs/action/: MoveToJoints.action  MoveToPose.action
src/iiwa_msgs/srv/: MoveToNamedPose.srv  MoveToPose.srv
src/iiwa_object_spawner/: package.xml  setup.cfg  setup.py
src/iiwa_object_spawner/iiwa_object_spawner/: motion_planing_test.py  object_spawner.py
src/iiwa_planning/: CMakeLists.txt  package.xml
src/iiwa_planning/scripts/: motion_planning.py  motion_planning_test.py  motion_sequence_config.json  motion_sequence_runner.py  move_to_pose_server.py
src/iiwa_planning/src/: motion_planning_cpp.cpp
src/iiwa_sunrise/: instruction.md
src/iiwa_sunrise/src/: ServerFriRos2.java  ServerFriV1.java  TeachKuka.java
src/iiwa_utils/: package.xml  setup.cfg  setup.py
src/iiwa_utils/iiwa_utils/: camera_spawner.py  converter.py  motion_config.json  object_spawner.py  setting_loader.py  test_motion_sequence.py
src/iiwa_voice/: package.xml  setup.cfg  setup.py
src/iiwa_voice/iiwa_voice/: voice_generate.py
src/iiwa_voice/resource/: .env  docker-compose.yaml
src/iiwa_web/: package.xml  setup.cfg  setup.py
src/iiwa_web/iiwa_web/: config_loader.py  deps.py  dynamic_router.py  main.py  robot.py  ros_node.py  runner.py  trajectory.py
src/realsense2_rgbd_plugin/: package.xml
src/realsense2_ros_mqtt_bridge/: package.xml
