<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iiwa_config</name>
  <version>0.1.0</version>
  <description>Конфигурационные файлы системы KUKA iiwa7: параметры MoveIt, контроллеров, кинематики и общих настроек</description>
  <maintainer email="grabardm@ml-dev.ru">daniel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime plugins referenced in YAML configs -->
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>pilz_industrial_motion_planner</exec_depend>
  <exec_depend>moveit_planners_chomp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
